--- a/analysis/paper.Rmd
+++ b/analysis/paper.Rmd
@@ -6,16 +6,19 @@ subtitle: Replicating PLSDA Analysis Using NMR Spectral Data
 author: Medha Sagar, Sanjana Gupta, Adrian Tullock, Florencia Marcaccio, Faryal Usman
 ---
 
-# 1. MetaboAnalystR
+# 1. Introduction
 The purpose of this repository is to serve as the home of the replication project. All relevant files, data, and code will be made available here in order to facilitate transparency and further reproducibility of this work. In this regard, the aim will be to minimize barriers and time required to perform future analyses. 
 
 There are a number of data processing challanges germane to metabolomics. Some notable ones tend to include specialized knowledged and software, which is why there is much value to be had in lowering the accessibility barrier for analysis. To help simplify the process for some of the more common metabolomic data analyses, MetaboAnalyst offers an accessible tool capable of handling most kinds of metabolomic data. At least in regards to NMR/MS spectral data, our project intends replicate the work used to support this claim.
 
 
-# 2. Partial Least Square Discriminant Analysis (PLSDA)
+# 2. MetaboAnalystR
 
 
-# 3. Replicating PLSDA Analysis of NMR Spectral Bin Data
+# 3. Partial Least Square Discriminant Analysis (PLSDA)
+
+
+# 4. Replicating PLSDA Analysis of NMR Spectral Bin Data
 
 ```{r echo=FALSE}
 library(here)
@@ -27,22 +30,23 @@ source(here("analysis", "001-PLSDA_code.R"))
 
 ![Image replicated.](figures/pls_score3d_0_dpi72.png)
 
-# 4. Change
+# 5. Change
 
-## 4.1 Change in imputation method
+## 5.1 Change in imputation method
 We will be changing two technical details in our analysis. First, the default imputation method for columns with less than 50% of missing values is set to "min". This method assigns half of the column's minimum positive value to the missing observations. The assumption of this approach is that most missing values occurred because the levels of abundance metabolites are below the detection limit. This assumption is generalized for all the possible datasets used in the MetaboAnalyst website. We decided to change the imputation method to "mean", a more widely used method that imputes the mean value of the column to the missing values. This change shouldn't impact the output in a significant manner. Due to the nature of the dataset used, data provided for the testing of the tool, we believe that it should not make a difference.
 
 
-## 4.2 Change in filtering method
+## 5.2 Change in filtering method
 The second change we implemented was in the filtering of the data. The goal of this step is to identify the variables that are less likely to be used in the final model. The default method to filter the variables is by Interquantile Range (IQR). What we propose is to change this method to Standard Deviation (SD) as, like IQR, it performs well when identifying non-informative variables that mantain near-constant values throughout the entire experiment.
 
 
-## 4.3 Change in Component for Variable Importance
+## 5.3 Change in Component for Variable Importance
+The package also generates feature importance graphs along with the PLSDA analysis. The feature importance function also takes into account, the component on which it calculates the importance. You can change the 'component' parameter and compare how the feature importace changes from one component to another. Theoretically, there must be not be too much of a change because the important features will appear more or less in the same order or rank for both components. 
 
-![Image replicated.](figures/pls_imp_0_dpi72.png)
-![Image replicated.](figures/pls_imp_2_dpi72.png)
+Therefore, as you can see from the images below, we tried to plot the feature importace for the first and second component and we cans see that the results do not vary much. The first three most important features renain constant for both the components. 
 
-# 5. Conclusion
+![Feature Importance Based on the First Component](figures/pls_imp_0_dpi72.png)
+![Feature Importance Based on the Second Component](figures/pls_imp_2_dpi72.png)
 
 
 # 6. References
