--- a/analysis/paper.Rmd
+++ b/analysis/paper.Rmd
@@ -50,3 +50,6 @@ Therefore, as you can see from the images below, we tried to plot the feature im
 
 
 # 6. References
+[1] Publication Link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2703878/
+[2] Online Tool: https://www.metaboanalyst.ca
+[3] R Package: https://github.com/xia-lab/MetaboAnalystR
