--- a/analysis/paper.Rmd
+++ b/analysis/paper.Rmd
@@ -30,9 +30,9 @@ Accompanying the web tool, there is a package available [@Package] that allows y
 # 3. Partial Least Square Discriminant Analysis (PLSDA)
 
 
-# 4. Replicating PLSDA Analysis of NMR Spectral Bin Data
+# 4. Results of Replicating PLSDA Analysis of NMR Spectral Bin Data
 
-We use the sample NMR spectral data that comes with the tutorial [1] in the online tool for this analysis. 
+We use the sample NMR spectral data that comes with the tutorial in the online tool for this analysis. 
 The package first checks the sanity of the data to make sure that its in the proper format. 
 
 1. Data Processing
@@ -54,7 +54,7 @@ library(here)
 source(here("analysis", "001-PLSDA_code.R"))
 ```
 
-This is the target image that we are trying to replicate. We get this image from [1]. 
+This is the target image that we are trying to replicate. We get this image from [@Paper]. 
 
 ![Image to be replicated.](figures/image_to_be_replicated.jpg)
 
@@ -62,17 +62,22 @@ This is the image that we obtain after replicating the steps in the tutorial pap
 The paper does not talk about the specific data processing steps so we kept everything to a default.
 ![Image replicated.](figures/pls_score3d_0_dpi72.png)
 
-# 5. Change
+# 5. Technical Variations
 
-## 5.1 Change in imputation method
-The first of the changes that we are going to implement is to change the imputation method for columns with less than 50% of missing values, which is set by default to "min". This method assigns half of the column's minimum positive value to the missing observations. The assumption of this approach is that most missing values occurred because the levels of abundance metabolites are below the detection limit. This assumption is generalized for all the possible datasets used in the MetaboAnalyst website. We decided to change the imputation method to "mean", a more widely used method that imputes the mean value of the column to the missing values. This change shouldn't impact the output in a significant manner. Due to the nature of the dataset used, data provided for the testing of the tool, we believe that it should not make a difference.
+## 5.1 Imputation method
+The first of the changes that we implemented was the imputation method for columns with less than 50% of missing values, which is set by default to "min". This method assigns half of the column's minimum positive value to the missing observations. The assumption of this approach is that most missing values occurred because the levels of abundance metabolites are below the detection limit, and this assumption is generalized for all the possible datasets used in the MetaboAnalyst website. We decided to change the imputation method to "mean", a more widely used method that imputes the mean value of the column to the missing values. Due to the nature of the dataset used, data provided for the testing of the tool, we believed that it should not make a difference.
+
+As we expected, because of a lack of missing values in the data, the result did not change.
 
 
-## 5.2 Change in filtering method
+## 5.2 Filtering method
 The second change we implemented was in the filtering of the data. The goal of this step is to identify the variables that are less likely to be used in the final model. The default method to filter the variables is by Interquantile Range (IQR). What we propose is to change this method to Standard Deviation (SD) as, like IQR, it performs well when identifying non-informative variables that mantain near-constant values throughout the entire experiment.
 
+The output remained constant after changing the filtering method.
 
-## 5.3 Change in Component for Variable Importance
+
+
+## 5.3 Component for Variable Importance
 The package also generates feature importance graphs along with the PLSDA analysis. The feature importance function also takes into account, the component on which it calculates the importance. You can change the 'component' parameter and compare how the feature importace changes from one component to another. Theoretically, there must be not be too much of a change because the important features will appear more or less in the same order or rank for both components. 
 
 Therefore, as you can see from the images below, we tried to plot the feature importace for the first and second component and we cans see that the results do not vary much. The first three most important features renain constant for both the components. 
